Sample code for calling built-in functions

--- a/src/006/demo-addition/index.html
+++ b/src/006/demo-addition/index.html
@@ -15,6 +15,6 @@
     <output id="secondNumber"></output>
     <span>=</span>
     <output id="answer"></output>
-    <p></p>
+    <p id="error-message"></p>
 </body>
 </html>
