Report Card demo - work on the HTML

--- a/sandbox/ReportCard/index.html
+++ b/sandbox/ReportCard/index.html
@@ -12,21 +12,28 @@
     <main>
         <h2>Courses</h2>
         <table>
-            <tr>
-                <th>Number</th>
-                <th>Name</th>
-                <th>Mark</th>
-            </tr>
-            <tr>
-                <td id="courseNumber">~placeholder~</td>
-                <td id="courseName">~placeholder~</td>
-                <td>~placeholder~</td>
-            </tr>
-            <tr>
-                <td><input type="text"></td>
-                <td><input type="text"></td>
-                <td><button>Add Course</button></td>
-            </tr>
+            <caption>Summary Transcript</caption>
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Name</th>
+                    <th>Mark</th>
+                </tr>
+                </thead>
+            <tbody>
+                <tr>
+                    <td id="courseNumber">~placeholder~</td>
+                    <td id="courseName">~placeholder~</td>
+                    <td>~placeholder~</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td><input type="text" placeholder="Course Number"></td>
+                    <td><input type="text" placeholder="Name of Course"></td>
+                    <td><button>Add Course</button></td>
+                </tr>
+            </tfoot>
         </table>
     </main>
 </body>
