Update agenda for Thursday's class

--- a/src/012/demo-trees/index.html
+++ b/src/012/demo-trees/index.html
@@ -15,7 +15,7 @@
 	<img class="feature" src="images/oak_tree.jpg"/>
 	<p class="feature description hidden">
 		I think that I will never see, a poem as lovely as a tree. <i>But if it happens that I should, I'll use the tree for firewood.</i>
-		<cite>From <a href="https://www.poetryfoundation.org/poetrymagazine/poems/12744/trees" target="_blank">Trees, by Joyce Kilmer</a>, italicized portion by <i>Dan Gilleland</i></cite>
+		<cite>From <a href="https://www.poetryfoundation.org/poetrymagazine/poems/12744/trees" target="_blank">Trees, by Joyce Kilmer</a>, with edits by <i>Dan Gilleland</i></cite>
 	</p>
 	<p>
 		Praesent lacinia magna quis arcu placerat tincidunt. Sed ut porttitor risus, sit amet tempus lorem. Aliquam erat volutpat. Sed tempor, lacus a faucibus efficitur, quam tortor scelerisque dolor, sit amet ornare mauris metus non lectus. Maecenas a blandit quam, et elementum dui. Etiam dapibus quam eu magna suscipit sagittis sagittis sit amet sapien. Aliquam erat volutpat. Donec eu auctor ipsum, id euismod mi. Vivamus pharetra rutrum risus quis scelerisque. Sed consectetur congue consequat. Quisque ac nibh quis turpis eleifend bibendum. Nulla rhoncus at magna nec fermentum. Sed vitae magna sed lacus dapibus ultricies. Sed sed interdum velit. Sed pellentesque, ante nec semper dignissim, felis ligula posuere dui, a pretium tortor mauris id magna.
