--- a/src/008/demo-events/index.html
+++ b/src/008/demo-events/index.html
@@ -9,14 +9,15 @@
 <main>
 	<header><h1>Trees are Beautiful</h1></header>
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae varius nibh. Donec efficitur bibendum purus, non facilisis elit tempus vel. Sed egestas vestibulum est nec commodo. Vivamus eget neque diam. Etiam dictum dolor at scelerisque sollicitudin. Aliquam pulvinar, nisl vel tincidunt imperdiet, tellus augue rutrum sem, at lacinia mauris est nec massa. Nullam faucibus malesuada fermentum. Integer nec purus fringilla, ornare nisi et, convallis metus. Ut dignissim, augue vel ullamcorper imperdiet, neque massa congue purus, eu varius eros ligula nec urna. Morbi lobortis posuere dui, condimentum convallis ante posuere id. Morbi commodo ex at condimentum pharetra.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae varius nibh. Donec efficitur bibendum purus, non facilisis elit tempus vel. Sed egestas vestibulum est nec commodo. Vivamus eget neque diam. Etiam dictum dolor at scelerisque sollicitudin. Aliquam pulvinar, nisl vel tincidunt imperdiet, tellus augue rutrum sem, at lacinia mauris est nec massa.
 	</p>
 	<img class="feature" src="images/oak_tree.jpg" alt="a beautiful tree">
 	<p class="feature description hidden">
-		Blah blah blah.
+		I think that I will never see, a poem as lovely as a tree. <i>But if it happens that I should, I'll use the tree for firewood.</i>
+		<cite>From <a href="https://www.poetryfoundation.org/poetrymagazine/poems/12744/trees" target="_blank">Trees, by Joyce Kilmer</a>, with edits by <i>Dan Gilleland</i></cite>
 	</p>
 	<p>
-		Praesent lacinia magna quis arcu placerat tincidunt. Sed ut porttitor risus, sit amet tempus lorem. Aliquam erat volutpat. Sed tempor, lacus a faucibus efficitur, quam tortor scelerisque dolor, sit amet ornare mauris metus non lectus. Maecenas a blandit quam, et elementum dui. Etiam dapibus quam eu magna suscipit sagittis sagittis sit amet sapien. Aliquam erat volutpat. Donec eu auctor ipsum, id euismod mi. Vivamus pharetra rutrum risus quis scelerisque. Sed consectetur congue consequat. Quisque ac nibh quis turpis eleifend bibendum. Nulla rhoncus at magna nec fermentum. Sed vitae magna sed lacus dapibus ultricies. Sed sed interdum velit. Sed pellentesque, ante nec semper dignissim, felis ligula posuere dui, a pretium tortor mauris id magna.
+		Praesent lacinia magna quis arcu placerat tincidunt. Sed ut porttitor risus, sit amet tempus lorem. Aliquam erat volutpat. Sed tempor, lacus a faucibus efficitur, quam tortor scelerisque dolor, sit amet ornare mauris metus non lectus. Maecenas a blandit quam, et elementum dui. Etiam dapibus quam eu magna suscipit sagittis sagittis sit amet sapien.
 	</p>
 </main>
 <!--Placed at bottom for efficiency-->
