Move script tag to head and add defer

--- a/src/008/demo-events/index.html
+++ b/src/008/demo-events/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Events Introdution</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<script src="js/main.js" defer></script>
 </head>
 <body>
 <main>
@@ -20,7 +21,5 @@
 		Praesent lacinia magna quis arcu placerat tincidunt. Sed ut porttitor risus, sit amet tempus lorem. Aliquam erat volutpat. Sed tempor, lacus a faucibus efficitur, quam tortor scelerisque dolor, sit amet ornare mauris metus non lectus. Maecenas a blandit quam, et elementum dui. Etiam dapibus quam eu magna suscipit sagittis sagittis sit amet sapien.
 	</p>
 </main>
-<!--Placed at bottom for efficiency-->
-<script src="js/main.js"></script>
 </body>
 </html>
