Flesh out the sample from today to add extras
This includes a demo of using the .target property of the event in an event handler function.

--- a/src/008/demo-events/index.html
+++ b/src/008/demo-events/index.html
@@ -20,6 +20,15 @@
 	<p>
 		Praesent lacinia magna quis arcu placerat tincidunt. Sed ut porttitor risus, sit amet tempus lorem. Aliquam erat volutpat. Sed tempor, lacus a faucibus efficitur, quam tortor scelerisque dolor, sit amet ornare mauris metus non lectus. Maecenas a blandit quam, et elementum dui. Etiam dapibus quam eu magna suscipit sagittis sagittis sit amet sapien.
 	</p>
+	<dialog>
+		<h3>Greetings, one and all!</h3>
+		<p>I am the (fairly new) <code>&lt;dialog&gt;</code> element. I have been triggered by your mouse moving out of the image on this page.</p>
+		<p>You can click the button below to close this dialog, or press the <kbd>Esc</kbd> key on your keyboard.</p>
+		<form method="dialog">
+		  <button>OK</button>
+		</form>
+	  </dialog>
+	  
 </main>
 </body>
 </html>
