--- a/src/012/demo-grammar/index.html
+++ b/src/012/demo-grammar/index.html
@@ -8,6 +8,14 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <h1>Sample Grade Calculation</h1>
+    <p>Enter your percent grade to get the letter grade and grade point value equivalent.</p>
+    <form>
+        <label for="percent">Percent Grade:</label>
+        <input type="number" id="percent" name="percent" min="0" max="100" step="1" />
+        <button type="button" id="convert">Convert</button>
+        <p id="result"></p>
+    </form>
     <h1>If-Else &ndash; Operators</h1>
     <h2>Relational Operators</h2>
     <p>Relational operators do a comparison between two items (the LH or "Left-Hand side" and the RH or "Right-Hand side"). All relational operations return a result of <code>true</code> or <code>false</code>.</p>
