--- a/src/012/demo-grammar/index.html
+++ b/src/012/demo-grammar/index.html
@@ -12,7 +12,7 @@
     <p>Enter your percent grade to get the letter grade and grade point value equivalent.</p>
     <form>
         <label for="percent">Percent Grade:</label>
-        <input type="number" id="percent" name="percent" min="0" max="100" step="1" />
+        <input type="number" id="percent" name="percent-val" min="0" max="100" step="1" />
         <button type="submit" id="convert">Convert</button>
         <p id="result"></p>
     </form>
