Finish intro to loops

--- a/src/015/demos/name-list/index.html
+++ b/src/015/demos/name-list/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name List Demo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8" />
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     <h1>Name List</h1>
