--- a/sandbox/ReportCard/index.html
+++ b/sandbox/ReportCard/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report Card</title>
+    <link rel="stylesheet" href="https://unpkg.com/boltcss/bolt.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
