More prep for ReportCard demo

--- a/sandbox/ReportCard/index.html
+++ b/sandbox/ReportCard/index.html
@@ -23,9 +23,29 @@
                 </thead>
             <tbody>
                 <tr>
-                    <td id="courseNumber">~placeholder~</td>
-                    <td id="courseName">~placeholder~</td>
+                    <td data-courseNumber="courseNumber">~placeholder~</td>
+                    <td data-courseName="courseName">~placeholder~</td>
                     <td>~placeholder~</td>
+                </tr>
+                <tr data-courseSummary="CPSC-1520">
+                    <td data-courseNumber="CPSC-1520">CPSC-1520</td>
+                    <td data-courseName="JavaScript Fundamentals">JavaScript Fundamentals</td>
+                    <td class="info">tba</td>
+                </tr>
+                <tr data-courseDetails="CPSC-1520">
+                    <td colspan="3">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Item</th>
+                                    <th>Weight</th>
+                                    <th>Earned</th>
+                                    <th>Possible</th>
+                                </tr>
+                            </thead>
+                            
+                        </table>
+                    </td>
                 </tr>
             </tbody>
             <tfoot>
