--- a/src/023/DMIT-1508/index.html
+++ b/src/023/DMIT-1508/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Database Data</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.11.2" />
     <script type="module" src="main.js"></script>
 </head>
 <body>
@@ -17,7 +18,7 @@
         </label>
         <button type="submit">Process</button>
         <label for="resultSet">JSON Result of Query
-            <textarea name="resultSet" id="resultSet" cols="80" rows="20"></textarea>
+            <textarea name="resultSet" id="resultSet" cols="60" rows="20"></textarea>
         </label>
     </form>
     <div id="tabularData"></div>
