More JSON data to load, plus notes on handling errors with fetch

--- a/src/023/DMIT-1508/index.html
+++ b/src/023/DMIT-1508/index.html
@@ -13,7 +13,8 @@
         <label for="dataFile">Data File
             <input name="dataFile" id="dataFile" list="knownFiles">
             <datalist id="knownFiles">
-                <option value="staff.json">
+                <option value="staff.json" />
+                <option value="products.json" />
             </datalist>
         </label>
         <button type="submit">Process</button>
