Updates to Timer and Intervals demos

--- a/src/024/demos/StopWatch/index.html
+++ b/src/024/demos/StopWatch/index.html
@@ -11,11 +11,15 @@
           font-size: 2rem;
       }
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css"/>
+    <script src="main.js" type="module"></script>
   </head>
   <body>
     <h1>Stopwatch</h1>
-    <p>Follow the <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals#Active_learning_Creating_your_own_stopwatch!" target="_blank">instructions</a> for this active learning.</p>
+    <aside>
+      <b>Oh no!</b> The instructions for this active learning are no longer on MDN! Still, this is good sample code. Check out the JavaScript file to see how it works.
+    </aside>
+    <p>Follow the <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals#Active_learning_Creating_your_own_stopwatch!" target="_blank"><strike>instructions</strike></a> for this active learning.</p>
     <p class="clock"></p>
-    <script src="main.js"></script>
   </body>
 </html>
