--- a/src/024/demos/ExploringTimeouts/index.html
+++ b/src/024/demos/ExploringTimeouts/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exploring Timeouts</title>
-    <script src="main.js" defer></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <h1>Exploring Timeouts</h1>
