--- a/src/025/demos/todo-list/index.html
+++ b/src/025/demos/todo-list/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="main.js" defer></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <section>
