Work from last class

--- a/src/032/frontend-website/index.html
+++ b/src/032/frontend-website/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+    <nav>
+        <h1>My Blog</h1>
+    </nav>
     <main>
         <section>
-            <h1>My Blog</h1>
             <div id="app"></div>
         </section>
         <section>
